--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "date-fns": "^4.1.0",
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
