--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-i18next": "^16.5.3",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.6.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
